Remove onClick method from the html

--- a/intro/index.html
+++ b/intro/index.html
@@ -16,7 +16,7 @@
   First <input type="text" id="num1"> Second <input type="text" id="num2">
   <br>
   <div id="output"></div>
-  <input type="button" onclick="addBy()" value="Add">
+  <input type="button" value="Add" id="add">
   <input type="button" onclick="subtractBy()" value="Subtract">
   <input type="button" onclick="divideBy()" value="Divide">
   <input type="button" onclick="multiplyBy()" value="Multiply">
@@ -26,6 +26,8 @@
     var output = document.getElementById("output");
     var num1 = document.getElementById("num1");
     var num2 = document.getElementById("num2");
+
+    document.getElementById("add").onclick = addBy;
 
     var a;
     var b;
