--- a/intro/index.html
+++ b/intro/index.html
@@ -17,9 +17,9 @@
   <br>
   <div id="output"></div>
   <input type="button" value="Add" id="add">
-  <input type="button" onclick="subtractBy()" value="Subtract">
-  <input type="button" onclick="divideBy()" value="Divide">
-  <input type="button" onclick="multiplyBy()" value="Multiply">
+  <input type="button" value="Subtract" id="subtract">
+  <input type="button" value="Divide" id="divide">
+  <input type="button" value="Multiply" id="multiply">
 
   <script>
 
@@ -28,6 +28,9 @@
     var num2 = document.getElementById("num2");
 
     document.getElementById("add").onclick = addBy;
+    document.getElementById("subtract").onclick = subtractBy;
+    document.getElementById("divide").onclick = divideBy;
+    document.getElementById("multiply").onclick = multiplyBy;
 
     var a;
     var b;
